--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         /* Hero Section */
         .hero {
-            background: linear-gradient(rgba(113, 16, 15, 0.8), rgba(113, 16, 15, 0.8)), url('/azouris/pics/IMG_5904.jpeg');
+            background: linear-gradient(rgba(113, 16, 15, 0.8), rgba(113, 16, 15, 0.8)), url('/pics/IMG_5904.jpeg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -622,7 +622,7 @@
         <nav>
             <div class="logo">
                 <a href="#home">
-                    <img src="/azouris/pics/A.png" alt="AZURIS Logo">
+                    <img src="/pics/A.png" alt="AZURIS Logo">
                 </a>
             </div>
             <div class="nav-links">
@@ -658,7 +658,7 @@
             <script>
             // Add hover sound effect (optional)
             document.querySelector('.cta-button').addEventListener('mouseenter', () => {
-                new Audio('/azouris/pics/freereadtextfile.mp3').play();
+                new Audio('/pics/freereadtextfile.mp3').play();
             });
             </script>
             
@@ -670,7 +670,7 @@
             <h2 class="section-title" data-i18n="why_us_title">WHY CHOOSE US</h2>
             <div class="why_us-content">
                 <div class="why_us-image">
-                    <img src="/azouris/pics/F72480B0-7498-4EF4-909B-3AD31C90EBE6_1_105_c.jpeg" alt="Medical Team">
+                    <img src="/pics/F72480B0-7498-4EF4-909B-3AD31C90EBE6_1_105_c.jpeg" alt="Medical Team">
                 </div>
                 <div class="why_us-text" data-i18n="why_us_text"></div>
             </div>
@@ -772,7 +772,7 @@
                 <script>
                 // Add hover sound effect (optional)
                 document.querySelector('.whatsapp-btn').addEventListener('mouseenter', () => {
-                    new Audio('/azouris/pics/freereadtextfile.mp3').play();
+                    new Audio('/pics/freereadtextfile.mp3').play();
                 });
                 </script>
                 <div class="email-collection">
@@ -789,19 +789,19 @@
             <h4 data-i18n="collab_title">In Collaboration With</h4>
             <div class="clinic-logos">
                 <!-- <a href="https:" target="_blank"> -->
-                    <img src="/azouris/pics/logo-clinique-international-1024.png" alt="Clinique Internationale Marrakech" class="clinic-logo">
+                    <img src="/pics/logo-clinique-international-1024.png" alt="Clinique Internationale Marrakech" class="clinic-logo">
                 </a>
                 <!-- <a href="https:" target="_blank"> -->
-                    <img src="/azouris/pics/logo-hupm.png" alt="Hôpital Universitaire Privé Marrakech" class="clinic-logo">
+                    <img src="/pics/logo-hupm.png" alt="Hôpital Universitaire Privé Marrakech" class="clinic-logo">
                 </a>
                 <!-- <a href="https:" target="_blank"> -->
                     <img src="/azouris/pics/header-logo.png" alt="Clinique Le Marrakech" class="clinic-logo">
                 </a>
                 <!-- <a href="https:" target="_blank"> -->
-                    <img src="/azouris/pics/logoCHU-removebg-preview.png" alt="CHU MOHAMMED 6" class="clinic-logo">
+                    <img src="/pics/logoCHU-removebg-preview.png" alt="CHU MOHAMMED 6" class="clinic-logo">
                 </a>
                 <!-- <a href="https:" target="_blank"> -->
-                    <img src="/azouris/pics/logo.png" alt="Clinique Le Marrakech" class="clinic-logo">
+                    <img src="/pics/logo.png" alt="Clinique Le Marrakech" class="clinic-logo">
                 </a>
                 
             </div>
