--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <img src="/azouris/pics/D.png"  alt="AZURIS Medical"> 
+            <img src="/pics/D.png"  alt="AZURIS Medical"> 
             <a href="https://wa.me/212708767926" target="_blank" class="cta-button">
                 <i class="fas fa-calendar-check"></i>
                 <span data-i18n="cta_button">BOOK A CONSULTATION</span>
@@ -795,7 +795,7 @@
                     <img src="/pics/logo-hupm.png" alt="Hôpital Universitaire Privé Marrakech" class="clinic-logo">
                 </a>
                 <!-- <a href="https:" target="_blank"> -->
-                    <img src="/azouris/pics/header-logo.png" alt="Clinique Le Marrakech" class="clinic-logo">
+                    <img src="/pics/header-logo.png" alt="Clinique Le Marrakech" class="clinic-logo">
                 </a>
                 <!-- <a href="https:" target="_blank"> -->
                     <img src="/pics/logoCHU-removebg-preview.png" alt="CHU MOHAMMED 6" class="clinic-logo">
