--- a/index.html
+++ b/index.html
@@ -157,17 +157,17 @@
     display: inline-flex;
     align-items: center;
     padding: 1.2rem 2.5rem;
-    background: linear-gradient(135deg, #FBDC6A 0%, #F9D04A 100%);
-    color: #71100F !important;
+    background: linear-gradient(135deg, #FBDC6A 0%,100%);
+    color: #71100F 50%;
     text-decoration: none;
-    border-radius: 15px;
+    border-radius: 20px;
     font-weight: 700;
     font-size: 1.2rem;
     transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
     position: relative;
     overflow: hidden;
     border: none;
-    box-shadow: 0 4px 15px rgba(251, 220, 106, 0.3);
+    box-shadow: 0 3px 15px rgba(251, 220, 106, 0.3);
     margin-bottom: 1.5rem;
 }
 
