--- a/index.html
+++ b/index.html
@@ -116,12 +116,9 @@
         }
 
         /* Hero Section */
-        @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) { 
+/*         @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {  */
         .hero {
-            background: linear-gradient(rgba(113, 16, 15, 0.8), rgba(113, 16, 15, 0.8)), 
-                        url('../pics/img_5904.jpg') no-repeat center center/cover;
-            /* Add fallback */
-            background-color: var(--background);
+            background: linear-gradient(rgba(113, 16, 15, 0.8), rgba(113, 16, 15, 0.8)),url('../pics/img_5904.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
