--- a/index.html
+++ b/index.html
@@ -389,8 +389,8 @@
         }
 
         .send-email:hover {
-            background: var(--white);
-            color: var(--golde);
+            background: var(--golde);
+            color: var(--background);
             border: 2px solid var(--background);
         }
 
