--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                 top: 80px;
                 left: 0;
                 right: 0;
-                background: var(--background);
+                background: var(--white);
                 flex-direction: column;
                 padding: 1rem;
                 text-align: center;
@@ -642,7 +642,7 @@
     }
     
     .language-switcher {
-        right: 50px; /* More spacing */
+        left: 100px; /* More spacing */
         gap: 0.3rem;
     }
     
