--- a/index.html
+++ b/index.html
@@ -495,6 +495,8 @@
             .language-switcher {
                 top: 25px;
                 right: 80px;
+                padding-top: 10%;
+
             }
             
             html[dir="rtl"] .language-switcher {
