--- a/index.html
+++ b/index.html
@@ -640,7 +640,8 @@
 @media (max-width: 768px) {
     .logo img {
         width: 80px; /* Smaller logo */
-        margin-left: 5px;
+        margin-left: 5px;        
+        padding-top: 10%;
     }
     
     .language-switcher {
