--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
     .logo img {
         width: 100px; /* Smaller logo */
         margin-left: 5px;        
-        padding-top: 10%;
+/*         padding-top: 10%; */
     }
     
     .language-switcher {
