--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@ html[dir="rtl"] .logo {
 
         <section id="prices" class="section">
             <h2 class="section-title" data-i18n="prices">PRICES</h2>
-            <!-- <div class="prices-grid">
+            <div class="prices-grid">
                 <div class="price-item">
                     <i class="fas fa-video price-icon"></i>
                     <h3 data-i18n="price1_title">Online Consultation</h3>
@@ -809,7 +809,7 @@ html[dir="rtl"] .logo {
                     <i class="fas fa-home price-icon"></i>
                     <h3 data-i18n="price2_title">Home Visit</h3>
                     <p data-i18n="price2_value">From 300 MAD</p>
-                </div> -->
+                </div>
                 <div class="price-item">
                     <i class="fas fa-user-nurse price-icon"></i>
                     <h3 data-i18n="price3_title">Nursing Services</h3>
