--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@ html[dir="rtl"] .logo {
                     price1_title: "Consultation en ligne",
                     price1_value: "À partir de 50 MAD",
                     price2_title: "Visite à domicile",
-                    price2_value: "Transport médical d'urgence et non urgent rapide et fiable, assurant une assistance sûre et opportune À partir de 300 MAD",
+                    price2_value: "À partir de 300 MAD",
                     price3_title: "Soins infirmiers",
                     price3_value: "Soins infirmiers professionnels et compatissants adaptés à vos besoins À partir de 100 MAD",
                     contact_title: "NOUS CONTACTER",
