--- a/index.html
+++ b/index.html
@@ -750,11 +750,11 @@ html[dir="rtl"] .logo {
         <section id="services" class="section">
             <h2 class="section-title" data-i18n="services">SERVICES</h2>
             <div class="services-grid">
-                <!-- <div class="service-card">
+                <div class="service-card">
                     <div class="service-icon"><i class="fas fa-user-md"></i></div>
                     <h3 data-i18n="service1_title">Medical Consultation</h3>
                     <p data-i18n="service1_desc">Expert medical consultation from experienced professionals</p>
-                </div> -->
+                </div>
                 <div class="service-card">
                     <div class="service-icon"><i class="fas fa-hand-holding-medical"></i></div>
                     <h3 data-i18n="service2_title">Nursing Services</h3>
